
		Swtiched from Data::Compare to Test::Deep.
	
	Postgreql:
		
		Fixed issue with PG_BYTEA not being defined.

		With version 9.1 the text of some error messages is
		changed from version 8.3

		With version 9.1, 'virtual' is now a keyword so
		the column virtual must now be written `virtual`.

		With version 9.1, even less auto-conversion happens
		so 0 != '0'.

	SQLite:
		
		Error messages for SQLite version 2 have changed a bit.

		Bugfix: missing lock_object() method added.
	
	Documentation:

		Section on alternatives removed as it's obsolete.
		Bug bounty removed.


2008/03/05 - 0.2004 - mysql improvement
	
	Mysql:
		Mysql version 5.0.45 does not have the SERIALIZABLE
		locking problem.  5.0.22 does.  "FOR UPDATE" is no 
		longer added to queries when mysql version 5.0.45 or
		above is detected.
		
		The mysql slow deadlock detection problem turned out to be
		a bug in the test suite.

2007/05/11 - 0.2003 - major release: garbage collection, bugfixes, mysql

	New features:

		* Garbage collection.  It's a separate module and
		  must be explicitly invoked.  It allows you to clean up 
		  persistent data that leaks.  OOPS::GC

		* Reference integrety checker.   OOPS::Fsck.

		* new iterator function: walk_hash()

		* new helper class: OOPS::TxHash

	Mysql:
		
		It turns out that mysql SERIALIZABLE locking does
		not currently work.  To get OOPS to function properly,
		it is necessary to add "FOR UPDATE" to every SELECT.
		This essentially single-threads access to the database
		becauase every OOPS instance reads a common row.

		See: http://bugs.mysql.com/?id=28029

	Bugfixes:

		Calling virtual_object on something and then 
		deleting the something and the calling commit()
		bombed.

		lock() didn't make it to the public interface -- oops!

		Multiple changes to the reference counts of unloaded
		objects would corrupt the unloaded objects.

		virtual_object() requests were not always saved.

		readonly mode didn't work on mysql.

		$ENV{OOPS_SYNC} was ignored.